--- a/k8s/api-deployment.yaml
+++ b/k8s/api-deployment.yaml
@@ -22,8 +22,38 @@ spec:
           envFrom:
             - configMapRef:
                 name: dating-app-config
-            - secretRef:
-                name: dating-app-secrets
+          # Secrets는 optional - 있으면 사용하고, 없으면 백엔드 기본값 사용
+          env:
+            - name: JWT_SECRET_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: dating-app-secrets
+                  key: JWT_SECRET_KEY
+                  optional: true
+            - name: JWT_ALGORITHM
+              valueFrom:
+                secretKeyRef:
+                  name: dating-app-secrets
+                  key: JWT_ALGORITHM
+                  optional: true
+            - name: KAKAO_MAP_APP_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: dating-app-secrets
+                  key: KAKAO_MAP_APP_KEY
+                  optional: true
+            - name: KAKAO_REST_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: dating-app-secrets
+                  key: KAKAO_REST_API_KEY
+                  optional: true
+            - name: GEMINI_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: dating-app-secrets
+                  key: GEMINI_API_KEY
+                  optional: true
           readinessProbe:
             httpGet:
               path: /api/health
